[REFACTOR] DockerFile